--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -1,3 +1,41 @@
 // Place all the styles related to the articles controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.container {
+  width: 50%;
+  margin: 0 auto;
+  padding: 16px;
+  text-align: center;
+  font-family: Helvetica;
+  line-height: 24px;
+  // border: 1px solid black;
+  box-shadow: 2px 2px 8px lightgrey;
+}
+
+.footer {
+  color: darkblue;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+a:hover {
+  color: teal;
+}
+
+ul {
+  list-style-type: none;
+  width: 50%;
+  // border: 1px solid blue;
+  margin: 0 auto;
+  padding: 0;
+  padding-bottom: 24px;
+  // padding-left: 64px;
+  text-align: left;
+}
+
+h1 {
+  // border: 1px solid blue;
+}
