--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,3 +1,4 @@
+<div class="container" >
 <h1> All Articles: </h1>
 <ul>
   <% @articles.each do |article| %>
@@ -6,4 +7,4 @@
 </ul>
 
 <%= link_to "Create a new article", new_article_path %>
-
+</div>
