--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,10 +1,12 @@
-<h1> New Article </h1>
-<%= form_for(@article) do |f| %>
-  <%= f.label :title %>
-  <%=f.text_field :title %>
-  <%= f.label :content %>
-  <%=f.text_field :content %>
-  <%= f.submit%>
-<% end %>
+<div class='container'>
+  <h1> New Article </h1>
+  <%= form_for(@article) do |f| %>
+    <%= f.label :title %>
+    <%=f.text_field :title %>
+    <%= f.label :content %>
+    <%=f.text_field :content %>
+    <%= f.submit%>
+  <% end %>
 
-<%= link_to "Back to home", articles_path %>
+  <%= link_to "Back to home", articles_path %>
+</div>
