--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,12 @@
-<h1> <%= @article.title %></h1>
-<p> <%= @article.content %></p>
+<div class= 'container'>
+  <h1> <%= @article.title %></h1>
+  <p> <%= @article.content %></p>
 
-<%= link_to "Back to home", articles_path %>
-<%= link_to "Edit", edit_article_path %>
-<%= link_to "Delete", article_path(@article), method: :delete, data: { confirm: 'Are you sure>' } %>
+  <div class='footer'>
+    <p>
+      <%= link_to "Home", articles_path %> |
+      <%= link_to "Edit", edit_article_path %> |
+      <%= link_to "Delete", article_path(@article), method: :delete, data: { confirm: 'Are you sure>' } %>
+    </p>
+  </div>
+</div>
